Budget names break word to avoid overflow

--- a/src/components/Cards/CardHeader/CardHeader.module.css
+++ b/src/components/Cards/CardHeader/CardHeader.module.css
@@ -9,6 +9,7 @@
 
 .card-name {
   margin-bottom: 0;
+  word-break: break-word;
 }
 
 .spending-summary {
